Refactor: profile-related components and add sidebar component

--- a/client/src/app/components/cart/cart.component.html
+++ b/client/src/app/components/cart/cart.component.html
@@ -1,21 +1,18 @@
+@if (isLoading) {
+<app-loading-spinner></app-loading-spinner>
+}
+
 <!-- breadcrumbs  -->
 <div>
   <nav class="mx-auto w-full mt-4 max-w-[1200px] px-5">
     <ul class="flex items-center">
       <li class="cursor-pointer">
         <a href="index.html">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="h-5 w-5"
-          >
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-5 w-5">
             <path
-              d="M11.47 3.84a.75.75 0 011.06 0l8.69 8.69a.75.75 0 101.06-1.06l-8.689-8.69a2.25 2.25 0 00-3.182 0l-8.69 8.69a.75.75 0 001.061 1.06l8.69-8.69z"
-            />
+              d="M11.47 3.84a.75.75 0 011.06 0l8.69 8.69a.75.75 0 101.06-1.06l-8.689-8.69a2.25 2.25 0 00-3.182 0l-8.69 8.69a.75.75 0 001.061 1.06l8.69-8.69z" />
             <path
-              d="M12 5.432l8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 01-.75-.75v-4.5a.75.75 0 00-.75-.75h-3a.75.75 0 00-.75.75V21a.75.75 0 01-.75.75H5.625a1.875 1.875 0 01-1.875-1.875v-6.198a2.29 2.29 0 00.091-.086L12 5.43z"
-            />
+              d="M12 5.432l8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 01-.75-.75v-4.5a.75.75 0 00-.75-.75h-3a.75.75 0 00-.75.75V21a.75.75 0 01-.75.75H5.625a1.875 1.875 0 01-1.875-1.875v-6.198a2.29 2.29 0 00.091-.086L12 5.43z" />
           </svg>
         </a>
       </li>
@@ -28,34 +25,19 @@
   </nav>
 </div>
 <!-- breadcrumbs  -->
-<section
-  class="container mx-auto flex-grow max-w-[1200px] border-b py-5 lg:flex lg:flex-row lg:py-10"
->
+<section class="container mx-auto flex-grow max-w-[1200px] border-b py-5 lg:flex lg:flex-row lg:py-10">
   <!-- Mobile cart table  -->
-  <section
-    class="container mx-auto my-3 flex w-full flex-col gap-3 px-4 md:hidden"
-  >
+  <section class="container mx-auto my-3 flex w-full flex-col gap-3 px-4 md:hidden">
     <!-- 1 -->
 
     <div class="flex w-full border px-4 py-4" *ngFor="let item of fakeItems">
-      <img
-        class="self-start object-contain"
-        width="90px"
-        src="./assets/images/bedroom.png"
-        alt="bedroom image"
-      />
+      <img class="self-start object-contain" width="90px" src="./assets/images/bedroom.png" alt="bedroom image" />
       <div class="ml-3 flex w-full flex-col justify-center">
         <div class="flex items-center justify-between">
           <p class="text-xl font-bold">{{ item.name }}</p>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="h-5 w-5"
-          >
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="h-5 w-5">
             <path
-              d="M10 3a1.5 1.5 0 110 3 1.5 1.5 0 010-3zM10 8.5a1.5 1.5 0 110 3 1.5 1.5 0 010-3zM11.5 15.5a1.5 1.5 0 10-3 0 1.5 1.5 0 003 0z"
-            />
+              d="M10 3a1.5 1.5 0 110 3 1.5 1.5 0 010-3zM10 8.5a1.5 1.5 0 110 3 1.5 1.5 0 010-3zM11.5 15.5a1.5 1.5 0 10-3 0 1.5 1.5 0 003 0z" />
           </svg>
         </div>
         <p class="text-sm text-gray-400">Size: XL</p>
@@ -63,33 +45,23 @@
         <div class="mt-2 flex w-full items-center justify-between">
           <div class="flex items-center justify-center">
             <button
-              class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500"
-            >
+              class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
               &minus;
             </button>
-            <div
-              class="flex h-8 w-8 cursor-text items-center justify-center border-t border-b active:ring-gray-500"
-            >
+            <div class="flex h-8 w-8 cursor-text items-center justify-center border-t border-b active:ring-gray-500">
               1
             </div>
             <button
-              class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500"
-            >
+              class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
               &#43;
             </button>
           </div>
 
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-            class="m-0 h-5 w-5 cursor-pointer"
-          >
-            <path
-              fill-rule="evenodd"
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+            class="m-0 h-5 w-5 cursor-pointer">
+            <path fill-rule="evenodd"
               d="M8.75 1A2.75 2.75 0 006 3.75v.443c-.795.077-1.584.176-2.365.298a.75.75 0 10.23 1.482l.149-.022.841 10.518A2.75 2.75 0 007.596 19h4.807a2.75 2.75 0 002.742-2.53l.841-10.52.149.023a.75.75 0 00.23-1.482A41.03 41.03 0 0014 4.193V3.75A2.75 2.75 0 0011.25 1h-2.5zM10 4c.84 0 1.673.025 2.5.075V3.75c0-.69-.56-1.25-1.25-1.25h-2.5c-.69 0-1.25.56-1.25 1.25v.325C8.327 4.025 9.16 4 10 4zM8.58 7.72a.75.75 0 00-1.5.06l.3 7.5a.75.75 0 101.5-.06l-.3-7.5zm4.34.06a.75.75 0 10-1.5-.06l-.3 7.5a.75.75 0 101.5.06l.3-7.5z"
-              clip-rule="evenodd"
-            />
+              clip-rule="evenodd" />
           </svg>
         </div>
       </div>
@@ -98,9 +70,7 @@
   <!-- /Mobile cart table  -->
 
   <!-- Desktop cart table  -->
-  <section
-    class="hidden max-h-[600px] w-full max-w-[1200px] grid-cols-1 gap-3 px-5 pb-10 md:grid"
-  >
+  <section class="hidden max-h-[600px] w-full max-w-[1200px] grid-cols-1 gap-3 px-5 pb-10 md:grid">
     <table class="table-fixed">
       <thead class="h-16 bg-neutral-100">
         <tr>
@@ -125,21 +95,15 @@
           <td class="mx-auto text-center">{{ item.price | currency }}</td>
           <td class="align-middle">
             <div class="flex items-center justify-center">
-              <button
-                (click)="decreaseQuantity(item)"
-                class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500"
-              >
+              <button (click)="decreaseQuantity(item)"
+                class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
                 &minus;
               </button>
-              <div
-                class="flex h-8 w-8 cursor-text items-center justify-center border-t border-b active:ring-gray-500"
-              >
+              <div class="flex h-8 w-8 cursor-text items-center justify-center border-t border-b active:ring-gray-500">
                 {{ item.count }}
               </div>
-              <button
-                (click)="increaseQuantity(item)"
-                class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500"
-              >
+              <button (click)="increaseQuantity(item)"
+                class="flex h-8 w-8 cursor-pointer items-center justify-center border duration-100 hover:bg-neutral-100 focus:ring-2 focus:ring-gray-500 active:ring-2 active:ring-gray-500">
                 &#43;
               </button>
             </div>
@@ -148,18 +112,11 @@
             {{ item.price * item.count | currency }}
           </td>
           <td class="align-middle">
-            <svg
-              (click)="removeItem(item)"
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 20 20"
-              fill="currentColor"
-              class="m-0 h-5 w-5 cursor-pointer"
-            >
-              <path
-                fill-rule="evenodd"
+            <svg (click)="removeItem(item)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+              class="m-0 h-5 w-5 cursor-pointer">
+              <path fill-rule="evenodd"
                 d="M8.75 1A2.75 2.75 0 006 3.75v.443c-.795.077-1.584.176-2.365.298a.75.75 0 10.23 1.482l.149-.022.841 10.518A2.75 2.75 0 007.596 19h4.807a2.75 2.75 0 002.742-2.53l.841-10.52.149.023a.75.75 0 00.23-1.482A41.03 41.03 0 0014 4.193V3.75A2.75 2.75 0 0011.25 1h-2.5zM10 4c.84 0 1.673.025 2.5.075V3.75c0-.69-.56-1.25-1.25-1.25h-2.5c-.69 0-1.25.56-1.25 1.25v.325C8.327 4.025 9.16 4 10 4zM8.58 7.72a.75.75 0 00-1.5.06l.3 7.5a.75.75 0 101.5-.06l-.3-7.5zm4.34.06a.75.75 0 10-1.5-.06l-.3 7.5a.75.75 0 101.5.06l.3-7.5z"
-                clip-rule="evenodd"
-              />
+                clip-rule="evenodd" />
             </svg>
           </td>
         </tr>
