--- a/client/src/app/components/manage-address/manage-address.component.html
+++ b/client/src/app/components/manage-address/manage-address.component.html
@@ -1,3 +1,7 @@
+@if (isLoading) {
+<app-loading-spinner></app-loading-spinner>
+}
+
 <div>
   <nav class="mx-auto w-full mt-4 max-w-[1200px] px-5">
     <ul class="flex items-center">
