--- a/client/src/app/components/sidebar/sidebar.component.html
+++ b/client/src/app/components/sidebar/sidebar.component.html
@@ -65,7 +65,7 @@
   <div class="flex border-b py-5">
     <div class="flex w-full">
       <div class="flex flex-col gap-2">
-        <a href="wishlist.html" class="flex items-center gap-2 font-medium active:text-violet-900">
+        <a routerLink="/wishList" class="flex items-center gap-2 font-medium active:text-violet-900">
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
             stroke="currentColor" class="h-5 w-5">
             <path stroke-linecap="round" stroke-linejoin="round"
