--- a/client/src/app/layouts/profile/profile.component.html
+++ b/client/src/app/layouts/profile/profile.component.html
@@ -2,17 +2,23 @@
 <app-loading-spinner></app-loading-spinner>
 }
 
-
 <div>
   <nav class="mx-auto w-full mt-4 max-w-[1200px] px-5">
     <ul class="flex items-center">
       <li class="cursor-pointer">
         <a href="index.html">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="h-5 w-5">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            class="h-5 w-5"
+          >
             <path
-              d="M11.47 3.84a.75.75 0 011.06 0l8.69 8.69a.75.75 0 101.06-1.06l-8.689-8.69a2.25 2.25 0 00-3.182 0l-8.69 8.69a.75.75 0 001.061 1.06l8.69-8.69z" />
+              d="M11.47 3.84a.75.75 0 011.06 0l8.69 8.69a.75.75 0 101.06-1.06l-8.689-8.69a2.25 2.25 0 00-3.182 0l-8.69 8.69a.75.75 0 001.061 1.06l8.69-8.69z"
+            />
             <path
-              d="M12 5.432l8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 01-.75-.75v-4.5a.75.75 0 00-.75-.75h-3a.75.75 0 00-.75.75V21a.75.75 0 01-.75.75H5.625a1.875 1.875 0 01-1.875-1.875v-6.198a2.29 2.29 0 00.091-.086L12 5.43z" />
+              d="M12 5.432l8.159 8.159c.03.03.06.058.091.086v6.198c0 1.035-.84 1.875-1.875 1.875H15a.75.75 0 01-.75-.75v-4.5a.75.75 0 00-.75-.75h-3a.75.75 0 00-.75.75V21a.75.75 0 01-.75.75H5.625a1.875 1.875 0 01-1.875-1.875v-6.198a2.29 2.29 0 00.091-.086L12 5.43z"
+            />
           </svg>
         </a>
       </li>
@@ -26,11 +32,12 @@
   <!-- /breadcrumbs  -->
 </div>
 
-<section class="container mx-auto w-full flex-grow max-w-[1200px] border-b py-5 lg:flex lg:flex-row lg:py-10">
+<section
+  class="container mx-auto w-full flex-grow max-w-[1200px] border-b py-5 lg:flex lg:flex-row lg:py-10"
+>
   <!-- sidebar  -->
   <app-sidebar [userInfo]="userInfo"></app-sidebar>
   <!-- /sidebar  -->
-
 
   <!-- <section
           class="grid w-full max-w-[1200px] grid-cols-1 gap-3 px-5 pb-10 lg:grid-cols-3"
@@ -90,19 +97,25 @@
           </div>
         </section> -->
   <div class="w-full">
-    <section class="grid w-full max-w-[1200px] grid-cols-1 gap-3 px-5 pb-10 lg:grid-cols-3">
+    <section
+      class="grid w-full max-w-[1200px] grid-cols-1 gap-3 px-5 pb-10 lg:grid-cols-3"
+    >
       <div class="">
         <div class="border py-5 shadow-md">
           <div class="flex justify-between px-4 pb-5">
             <p class="font-bold">Personal Profile</p>
-            <a class="text-sm text-violet-900" href="edit-profile.html">Edit</a>
+            <a class="text-sm text-violet-900" routerLink="/manage-address"
+              >Edit</a
+            >
           </div>
 
           <div class="px-4">
             <p>{{ userInfo.fullName }}</p>
             <p>{{ userInfo.email }}</p>
             <p>{{ userInfo.address[0].street1 }}</p>
-            <p>{{ userInfo.address[0].city }}, {{ userInfo.address[0].state }}</p>
+            <p>
+              {{ userInfo.address[0].city }}, {{ userInfo.address[0].state }}
+            </p>
             <p>{{ userInfo.address[0].country }}</p>
           </div>
         </div>
@@ -112,14 +125,18 @@
         <div class="border py-5 shadow-md">
           <div class="flex justify-between px-4 pb-5">
             <p class="font-bold">Shipping Address</p>
-            <a class="text-sm text-violet-900" href="manage-address.html">Edit</a>
+            <a class="text-sm text-violet-900" routerLink="/manage-address"
+              >Edit</a
+            >
           </div>
 
           <div class="px-4">
             <p>{{ userInfo.fullName }}</p>
             <p>{{ userInfo.email }}</p>
             <p>{{ userInfo.address[0].street1 }}</p>
-            <p>{{ userInfo.address[0].city }}, {{ userInfo.address[0].state }}</p>
+            <p>
+              {{ userInfo.address[0].city }}, {{ userInfo.address[0].state }}
+            </p>
             <p>{{ userInfo.address[0].country }}</p>
           </div>
         </div>
@@ -129,20 +146,23 @@
         <div class="border py-5 shadow-md">
           <div class="flex justify-between px-4 pb-5">
             <p class="font-bold">Billing Address</p>
-            <a class="text-sm text-violet-900" href="#">Edit</a>
+            <a class="text-sm text-violet-900" routerLink="/manage-address"
+              >Edit</a
+            >
           </div>
 
           <div class="px-4">
             <p>{{ userInfo.fullName }}</p>
             <p>{{ userInfo.email }}</p>
             <p>{{ userInfo.address[0].street1 }}</p>
-            <p>{{ userInfo.address[0].city }}, {{ userInfo.address[0].state }}</p>
+            <p>
+              {{ userInfo.address[0].city }}, {{ userInfo.address[0].state }}
+            </p>
             <p>{{ userInfo.address[0].country }}</p>
           </div>
         </div>
       </div>
     </section>
     <!-- /Option cards -->
-
   </div>
 </section>
