--- a/client/src/app/components/accounts-overview/accounts-overview.component.html
+++ b/client/src/app/components/accounts-overview/accounts-overview.component.html
@@ -35,7 +35,12 @@
         </td>
         <td class="px-4 py-2 text-center">
           <!-- (click)="editUser(user)" -->
-          <button class="px-2 py-1 mx-2 bg-violet-900 text-white rounded">
+          <button
+            mat-raised-button
+            mat-raised-button
+            (click)="openDialog(user)"
+            class="px-2 py-1 mx-2 bg-violet-900 text-white rounded"
+          >
             Edit
           </button>
           <!-- (click)="deleteUser(user.id)" -->
