feat(Overview):add Overview to enables charts

--- a/client/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/client/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-xl font-bold mb-4 text-center">Admin Dashboard</h2>
     <ul class="space-y-2">
       <li class="bg-amber-400 p-3 text-black text-xl font-bold rounded-lg">
-        <a routerLink="/admin-dashboard">Overview</a>
+        <a routerLink="/admin-dashboard/overview">Overview</a>
       </li>
       <li class="bg-amber-400 p-3 text-black text-xl font-bold rounded-lg">
         <a routerLink="/admin-dashboard/accounts-overview">Accounts Overview</a>
