feat(product): add getProductsCharts()

--- a/client/src/app/components/overview/overview.component.html
+++ b/client/src/app/components/overview/overview.component.html
@@ -1,5 +1,5 @@
-<div class="container grid items-center grid-rows-1 m-auto">
-  <div class="bg-white rounded-lg shadow-lg p-4">
+<div class="container mx-auto grid grid-rows-1">
+  <div class="bg-white rounded-lg shadow-lg p-4 lg:w-full md:w-4/4 sm:w-full m-auto">
     <div class="flex items-center justify-between mb-4">
       <h5 class="text-xl font-bold leading-none text-gray-500">
         Status Users Registered
@@ -14,6 +14,7 @@
             [data]="UserChartData"
             [options]="UserChartOptions"
             [type]="'line'"
+            class="w-full"
           ></canvas>
         </li>
       </ul>
@@ -21,9 +22,10 @@
   </div>
 </div>
 
-<div class="container grid items-center grid-rows-1 mt-2">
-  <div class="grid w-full grid-cols-2 gap-2">
 
+<div class="container grid items-center grid-rows-1 mt-2">
+  <div class="grid w-full grid-cols-1 md:grid-cols-1 lg:grid-cols-2 gap-2">
+    <!-- Status Orders -->
     <div class="bg-white rounded-lg shadow">
       <div class="flex items-center justify-start p-2">
         <h5 class="text-xl p-3 font-bold leading-none text-gray-500">
@@ -48,6 +50,7 @@
       </div>
     </div>
 
+    <!-- Status Products -->
     <div class="bg-white rounded-lg shadow">
       <div class="flex items-center justify-start p-2">
         <h5 class="text-xl p-3 font-bold leading-none text-gray-500">
