--- a/client/src/app/components/admin-dashboard/admin-dashboard.component.html
+++ b/client/src/app/components/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,8 @@
 <div class="flex h-screen">
-  <div class="bg-violet-900 text-white w-64 flex-none p-4">
+  <!-- Sidebar -->
+  <div
+    class="bg-violet-900 text-white w-64 flex-none p-4 fixed top-0 left-0 h-full"
+  >
     <h2 class="text-xl font-bold mb-4 text-center">Admin Dashboard</h2>
     <ul class="space-y-2">
       <li class="bg-amber-400 p-3 text-black text-xl font-bold rounded-lg">
@@ -18,7 +21,7 @@
   </div>
 
   <!-- Main Content -->
-  <div class="flex-grow p-4">
+  <div class="flex-grow p-4 ml-64 overflow-auto">
     <router-outlet></router-outlet>
     <div class="mt-4"></div>
     <div class="mt-4"></div>
